# pyuiw

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
pyuiw/: __init__.py  __main__.py  __version__.py  pyuiw.py
pyuiw/pyside2uic/: __init__.py  driver.py  exceptions.py  objcreator.py  properties.py  uiparser.py
pyuiw/pyside2uic/Compiler/: compiler.py  indenter.py  misc.py  proxy_type.py  qobjectcreator.py  qtproxies.py
pyuiw/pyside2uic/port_v2/: as_string.py  invoke.py  load_plugin.py  proxy_base.py  string_io.py
pyuiw/pyside2uic/port_v3/: ascii_upper.py  proxy_base.py
pyuiw/pyside2uic/widget-plugins/: qtwebkit.py
pyuiw/uic/: __init__.py  driver.py  exceptions.py  icon_cache.py  objcreator.py  properties.py  uiparser.py
pyuiw/uic/Compiler/: __init__.py  compiler.py  indenter.py  misc.py  proxy_type.py  qobjectcreator.py  qtproxies.py
pyuiw/uic/port_v2/: as_string.py  ascii_upper.py  load_plugin.py  proxy_base.py  string_io.py
pyuiw/uic/port_v3/: __init__.py  as_string.py  ascii_upper.py  invoke.py  proxy_base.py  string_io.py
pyuiw/uic/widget-plugins/: qtdeclarative.py  qtwebkit.py
scripts/: deploy.py  install.py  run.bat
tests/: conftest.py  test_config.py  test_options.py  test_watcher.py
tests/ui/: basic.ui  blank_button.ui  config.toml  custom.ui
