[tool.poetry]
name = "pyuiw"
version = "0.1.0"
description = "Command Line File Watcher for Qt ui file to python file."
authors = ["timmyliang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
PySide2 = "^5.15.2"
"Qt.py" = "^1.3.6"
isort = "^5.10.1"
black = "^21.11b1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
isort = "^5.10.1"
pylint = "^2.12.1"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"
pytest-qt = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.16.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/photoshop/__version__.py"
]

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "test"]
filter_files = true
known_first_party = "src"
# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"
force_sort_within_sections = true
force_single_line = true
# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python2.7,echo
isolated_build = True
skipsdist = true

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest

[testenv:echo]
deps =
commands = python -c "print(123)"

"""

[tool.flake8]
max-line-length=88
